Made calendar show up right.

--- a/assets/calendar.css
+++ b/assets/calendar.css
@@ -9,7 +9,7 @@
 #imgMap {
 	width: 780px;
 	height: 659px;
-	background-image: url('pics/adventskalender.jpg');
+	background-image: url('../pics/adventskalender.jpg');
 	position: relative;
 }
 #imgMap div {
@@ -28,54 +28,54 @@
 }
 
 #t14 { top: 57px; left: 171px; }
-#t14 a:hover { background-image: url("pics/hover/14.jpg"); }
+#t14 a:hover { background-image: url("../pics/hover/14.jpg"); }
 #t22 { top: 57px; left: 281px; }
-#t22 a:hover { background-image: url("pics/hover/22.jpg"); }
+#t22 a:hover { background-image: url("../pics/hover/22.jpg"); }
 #t3 { top: 57px; left: 391px; }
-#t3 a:hover { background-image: url("pics/hover/3.jpg"); }
+#t3 a:hover { background-image: url("../pics/hover/3.jpg"); }
 #t11 { top: 57px; left: 501px; }
-#t11 a:hover { background-image: url("pics/hover/11.jpg"); }
+#t11 a:hover { background-image: url("../pics/hover/11.jpg"); }
 #t20 { top: 57px; left: 611px; }
-#t20 a:hover { background-image: url("pics/hover/20.jpg"); }
+#t20 a:hover { background-image: url("../pics/hover/20.jpg"); }
 
 #t1 { top: 167px; left: 501px; }
-#t1 a:hover { background-image: url("pics/hover/1.jpg"); }
+#t1 a:hover { background-image: url("../pics/hover/1.jpg"); }
 #t13 { top: 167px; left: 611px; }
-#t13 a:hover { background-image: url("pics/hover/13.jpg"); }
+#t13 a:hover { background-image: url("../pics/hover/13.jpg"); }
 
 #t10 { top: 277px; left: 61px; }
-#t10 a:hover { background-image: url("pics/hover/10.jpg"); }
+#t10 a:hover { background-image: url("../pics/hover/10.jpg"); }
 #t24 { top: 277px; left: 171px; }
-#t24 a:hover { background-image: url("pics/hover/24.jpg"); }
+#t24 a:hover { background-image: url("../pics/hover/24.jpg"); }
 #t6 { top: 277px; left: 281px; }
-#t6 a:hover { background-image: url("pics/hover/6.jpg"); }
+#t6 a:hover { background-image: url("../pics/hover/6.jpg"); }
 #t9 { top: 277px; left: 391px; }
-#t9 a:hover { background-image: url("pics/hover/9.jpg"); }
+#t9 a:hover { background-image: url("../pics/hover/9.jpg"); }
 #t7 { top: 277px; left: 501px; }
-#t7 a:hover { background-image: url("pics/hover/7.jpg"); }
+#t7 a:hover { background-image: url("../pics/hover/7.jpg"); }
 #t15 { top: 277px; left: 611px; }
-#t15 a:hover { background-image: url("pics/hover/15.jpg"); }
+#t15 a:hover { background-image: url("../pics/hover/15.jpg"); }
 
 #t8 { top: 387px; left: 61px; }
-#t8 a:hover { background-image: url("pics/hover/8.jpg"); }
+#t8 a:hover { background-image: url("../pics/hover/8.jpg"); }
 #t2 { top: 387px; left: 171px; }
-#t2 a:hover { background-image: url("pics/hover/2.jpg"); }
+#t2 a:hover { background-image: url("../pics/hover/2.jpg"); }
 #t18 { top: 387px; left: 281px; }
-#t18 a:hover { background-image: url("pics/hover/18.jpg"); }
+#t18 a:hover { background-image: url("../pics/hover/18.jpg"); }
 #t23 { top: 387px; left: 391px; }
-#t23 a:hover { background-image: url("pics/hover/23.jpg"); }
+#t23 a:hover { background-image: url("../pics/hover/23.jpg"); }
 #t4 { top: 387px; left: 611px; }
-#t4 a:hover { background-image: url("pics/hover/4.jpg"); }
+#t4 a:hover { background-image: url("../pics/hover/4.jpg"); }
 
 #t16 { top: 497px; left: 61px; }
-#t16 a:hover { background-image: url("pics/hover/16.jpg"); }
+#t16 a:hover { background-image: url("../pics/hover/16.jpg"); }
 #t12 { top: 497px; left: 171px; }
-#t12 a:hover { background-image: url("pics/hover/12.jpg"); }
+#t12 a:hover { background-image: url("../pics/hover/12.jpg"); }
 #t5 { top: 497px; left: 281px; }
-#t5 a:hover { background-image: url("pics/hover/5.jpg"); }
+#t5 a:hover { background-image: url("../pics/hover/5.jpg"); }
 #t19 { top: 497px; left: 391px; }
-#t19 a:hover { background-image: url("pics/hover/19.jpg"); }
+#t19 a:hover { background-image: url("../pics/hover/19.jpg"); }
 #t17 { top: 497px; left: 501px; }
-#t17 a:hover { background-image: url("pics/hover/17.jpg"); }
+#t17 a:hover { background-image: url("../pics/hover/17.jpg"); }
 #t21 { top: 497px; left: 611px; }
-#t21 a:hover { background-image: url("pics/hover/21.jpg"); }
+#t21 a:hover { background-image: url("../pics/hover/21.jpg"); }
