--- a/assets/door.css
+++ b/assets/door.css
@@ -1,5 +1,5 @@
 @import url("http://yui.yahooapis.com/pure/0.3.0/pure-min.css");
-@import url("lightbox/lightbox.css");
+@import url("../lightbox/lightbox.css");
 @import url("https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister");
 
 input, textarea, label, .pure-button-primary { font-family: "Trebuchet MS", Arial, Helvetica, sans-serif; }
@@ -9,19 +9,12 @@ a:hover { color: #900; }
 	width: 740px;
 	height: 619px;
 	padding: 20px;
-	background-image: url('pics/back.jpg');
+	background-image: url('../pics/back.jpg');
 }
-#year {
-	font-family: 'Love Ya Like A Sister';
-	font-size: 20pt;
-	color: #ffffee;
-	position: absolute;
-	top: 12px; left: 274px;
-	}
 .top {
 	height: 78px;
 	margin: -20px -20px 30px -20px;
-	background-image: url('pics/adventskalender-schrift.jpg');
+	background-image: url('../pics/adventskalender-schrift.jpg');
 	text-align: right;
 	-moz-box-shadow:    0px 2px 2px 0px #666;
 	-webkit-box-shadow: 0px 2px 2px 0px #666;
@@ -48,7 +41,7 @@ a:hover { color: #900; }
 	max-height: 375px;
 	overflow: auto;
 	padding: 0 10px;
-	background-image: url('pics/alphaoverlay.png');
+	background-image: url('../pics/alphaoverlay.png');
 }
 .i table, .i td {
 	border: none;
@@ -69,7 +62,7 @@ a:hover { color: #900; }
 }
 .formular, .misc {
 	clear: left;
-	background-image: url('pics/alphaoverlay.png');
+	background-image: url('../pics/alphaoverlay.png');
 	width: 720px;
 	padding: 10px;
 }
